# AI.me

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ai-agent-dev.yml  ai-agent-review.yml  ai-agent-test.yml  ci.yml
docker/: Dockerfile
docs/: ARCHITECTURE.md  QUICKSTART.md  STANDARDS.md
docs/agents/: AGENT_CAPABILITIES.md  AGENT_CONSTRAINTS.md  AGENT_CONTEXT.md  AGENT_EXAMPLES.md
docs/architecture/: COMPONENT_SPECS.md  DATA_FLOW.md  GRAPH_MODEL.md  REASONING_ENGINE.md  SYSTEM_ARCHITECTURE.md  VERSIONING_SYSTEM.md
docs/business/: BUSINESS_MODEL.md  COMPETITIVE_ANALYSIS.md  CUSTOMER_SEGMENTS.md  MARKET_ANALYSIS.md  REVENUE_MODEL.md
docs/development/: CODING_STANDARDS.md  CONTRIBUTING.md  SETUP_GUIDE.md  TESTING_GUIDE.md  TROUBLESHOOTING.md
docs/product/: API_SPEC.md  DATA_MODEL.md  DEPLOYMENT.md  INTEGRATION_GUIDE.md  PRODUCT_SPEC.md
docs/specs/: AUDIT_SPEC.md  GRAPH_PROCESSING_SPEC.md  LLM_INTEGRATION_SPEC.md  REASONING_SPEC.md  SECURITY_SPEC.md
docs/tools/: generate_docs.sh  update_specs.sh  validate_docs.sh
docs/workflows/: development.md  review.md  testing.md
examples/: __init__.py  basic_usage.py  example_usage.py
nxo/: __init__.py  config.py
nxo/api/: __init__.py  main.py  models.py
nxo/audit/: __init__.py  audit_logger.py
nxo/core/: __init__.py  graph_builder.py  reasoning_engine.py  versioning.py
scripts/: run_tests.sh  setup.sh
scripts/workflows/: agent_dev.sh  agent_full_cycle.sh  agent_review.sh  agent_test.sh
src/: __init__.py
src/api/: main.py
src/core/: __init__.py
src/core/audit/: __init__.py  (+1 more)
src/integrations/: __init__.py
src/services/: graph_service.py
src/utils/: config.py
tests/: __init__.py  test_graph_processor.py  test_reasoning_engine.py
(+26 files in other folders)
